@@ -55,8 +55,9 @@ allprojects {
 }
 
 tasks.withType(JavaCompile) {
-	sourceCompatibility = 17
-	targetCompatibility = 17
+	sourceCompatibility = 21
+	targetCompatibility = 21
+	options.compilerArgs.add("--enable-preview")
 }
 
 sourceSets.main.java.srcDirs = ["src"]
